--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@
 
 # Hugo
 resources/
-public/
+/resources/
+/public/
 jsconfig.json
 node_modules/
 go.sum
 .hugo_build.lock
+.Rproj.user
+.DS_Store
+Thumbs.db
